@@ -1,23 +1,0 @@
-===========================================================================
-$NetBSD: MESSAGE,v 1.1 2014/09/10 10:14:07 richard Exp $
-
-hgnested is a Mercurial extension to work with nested repositories.
-
-It was inspired by the forest extension.
-
-The extension allows to apply common Mercurial commands to all the nested
-repositories at once like pull, push etc. It also allows to fetch a complete
-tree of repositories through ssh or http.
-
-To enable the "hgnested" extension, create an entry for it in your hgrc, like
-this:
-
-    [extensions]
-    hgnested =
-
-See `hg help hgnested` for the complete list of commands.
-
-For more information please visit the following website:
-
-	http://code.google.com/p/hgnested/
-===========================================================================
